tests/out/error/redef/mixed.in.bt
struct Mixed{}

enum Mixed{
	default
}

struct Mixed{}

type Mixed := i32

interface Mixed {}
